# work-nz

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  CLAUDE.md  package.json  playwright.config.ts  pnpm-lock.yaml  skills-lock.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: ralph-loop.local.md  settings.json  settings.local.json
.claude/agents/: code-quality-checker.md  e2e-test-agent.md  test-agent.md  vue-i18n-supplement.md
.trae/documents/: 本地项目管理应用-产品需求PRD.md  本地项目管理应用-技术架构.md  本地项目管理应用-页面设计.md
design/: app-ui.pen
docs/modules/: README.md
docs/superpowers/: 2026-04-04-git-auto-scan-design.md
pm-app/design/: pencil-new.pen
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: db_helpers.rs  dir_type.rs  directory.rs  filesystem.rs  git.rs  ide.rs  mod.rs  module.rs  project.rs  task.rs  template.rs  workspace.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/types/: mod.rs
src/components/: MarkdownRenderer.vue  MarkdownThemeSelector.vue  SettingsBar.vue  SimpleVDOM.vue  SmartMarkdownRenderer.vue  VaporExample.vue
src/composables/: useApi.spec.ts  useApi.ts  useAsync.ts  useDebounce.spec.ts  useDebounce.ts  useDirectoryNavigation.ts  useDirectoryTemplate.ts  useElementSource.ts  useFileModule.ts  useFilePath.spec.ts  useGitAutoFetch.ts  useMarkdownExtensions.spec.ts  useMarkdownExtensions.ts  useMarkdownHighlight.spec.ts  useMarkdownHighlight.ts  useMarkdownLinkHandler.ts  (+8 more)
(+559 files in other folders)
